--- a/Fluent.rmskin/Skins/Fluent/@Resources/background.ini
+++ b/Fluent.rmskin/Skins/Fluent/@Resources/background.ini
@@ -10,8 +10,28 @@
 
 [Rainmeter]
 BackgroundMode=2
-SolidColor=EEEEEE7F
-BackgroundMargins=0,0,9,9
+SolidColor=FFFFFFC8
+BackgroundMargins=0,0,0,10
+
+[Variables]
+fontName=Segoe UI
+textSize=12
+colorText=0,0,0,255
+MaxW=349
+
+[meterTitle]
+Meter=String
+X=(#MaxW#/2)
+Y=10
+W=#MaxW#
+StringAlign=Center
+StringCase=Upper
+FontColor=#WindowsColor#
+FontFace=#fontName#
+FontSize=#textSize#
+AntiAlias=1
+ClipString=1
+DynamicVariables=1
 
 [BlurBehind]
 Measure=Plugin
