--- a/Fluent.rmskin/Skins/Fluent/Network/Network.ini
+++ b/Fluent.rmskin/Skins/Fluent/Network/Network.ini
@@ -9,17 +9,16 @@ Update=1000
 [Metadata]
 ; Contains basic information of the skin.
 Name=Network
-Author=poiru
+Author=Amir Ammari
 Information=Shows your IP address and network activity.
 License=Creative Commons BY-NC-SA 3.0
-Version=1.0.0
+Version=1.1
 
 [Variables]
 ; Variables declared here can be used later on between two # characters (e.g. #MyVariable#).
-fontName=Trebuchet MS
-textSize=8
+@Include1=#@#systemColors.ini
+@Include2=#@#background.ini
 colorBar=235,170,0,255
-colorText=0,0,0,255
 maxDownload=10485760
 MaxUpload=10485760
 ; Set maxDownload and maxUpload to your maximum download and upload speed in bits.
@@ -29,7 +28,14 @@ MaxUpload=10485760
 ; ----------------------------------
 ; MEASURES return some kind of value
 ; ----------------------------------
-@Include1=#@#background.ini
+
+[MeasureInternetConnectivity]
+; Returns the status of the internet connection.
+Measure=Plugin
+Plugin=SysInfo
+SysInfoType=INTERNET_CONNECTIVITY
+Substitute="-1":"No Internet","1":"Connected"
+OnChangeAction=[!UpdateMeter ConnectedLabel]
 
 [measureIP]
 ; This measure returns your IPv4 address. WebParser measures are relatively complicated. If you're a beginner with
@@ -58,25 +64,10 @@ NetOutSpeed=#maxUpload#
 ; STYLES are used to "centralize" options
 ; ----------------------------------
 
-[styleTitle]
-StringAlign=Center
-StringCase=Upper
-StringStyle=Bold
-
-
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=10
-AntiAlias=1
-ClipString=1
-
 [styleLeftText]
 StringAlign=Left
 ; Meters using styleLeftText will be left-aligned.
 StringCase=None
-StringStyle=Bold
-
-
 FontColor=#colorText#
 FontFace=#fontName#
 FontSize=#textSize#
@@ -86,9 +77,6 @@ ClipString=1
 [styleRightText]
 StringAlign=Right
 StringCase=None
-StringStyle=Bold
-
-
 FontColor=#colorText#
 FontFace=#fontName#
 FontSize=#textSize#
@@ -108,15 +96,10 @@ SolidColor=255,255,255,15
 ; ----------------------------------
 
 [meterTitle]
-Meter=String
-MeterStyle=styleTitle
-; Using MeterStyle=styleTitle will basically "copy" the
-; contents of the [styleTitle] section here during runtime.
-X=100
-Y=12
-W=190
-H=18
-Text=Network
+; Shows the SSID of the current WiFi network.
+MeasureName=MeasureInternetConnectivity
+Text="%1"
+Group=Connected
 ; Even though the text is set to Network, Rainmeter will display
 ; it as NETWORK, because styleTitle contains StringCase=Upper.
 
@@ -125,48 +108,36 @@ Meter=String
 MeterStyle=styleLeftText
 X=10
 Y=40
-W=190
-H=14
+W=((#MaxW#-20)/2)
 Text=IP Address
 
 [meterIPValue]
 Meter=String
 MeterStyle=styleRightText
 MeasureName=measureIP
-X=200
+X=(#MaxW#-10)
 Y=0r
+W=((#MaxW#-20)/2)
 ; r stands for relative. In this case, the Y postition of meterValueCPU is 0 pixels
 ; below the Y value of the previous meter (i.e it's the same as in meterLabelCPU).
-W=190
-H=14
 Text=%1
 ; %1 stands for the value of MeasureName (measureIP in this case).
-
-[meterSeperator]
-Meter=Image
-MeterStyle=styleSeperator
-X=10
-Y=52
-W=190
-H=1
 
 [meterUploadLabel]
 Meter=String
 MeterStyle=styleLeftText
 X=10
 Y=60
-W=190
-H=14
+W=((#MaxW#-20)/2)
 Text=Upload
 
 [meterUploadValue]
 Meter=String
 MeterStyle=styleRightText
 MeasureName=measureNetOut
-X=200
+X=(#MaxW#-10)
 Y=0r
-W=190
-H=14
+W=((#MaxW#-20)/2)
 Text=%1B/s
 NumOfDecimals=1
 AutoScale=1
@@ -179,7 +150,7 @@ MeterStyle=styleBar
 MeasureName=measureNetOut
 X=10
 Y=72
-W=190
+W=(#MaxW#-20)
 H=1
 
 [meterDownloadLabel]
@@ -187,18 +158,15 @@ Meter=String
 MeterStyle=styleLeftText
 X=10
 Y=80
-W=190
-H=14
+W=((#MaxW#-20)/2)
 Text=Download
 
 [meterDownloadValue]
 Meter=String
 MeterStyle=styleRightText
 MeasureName=measureNetIn
-X=200
+X=(#MaxW#-10)
 Y=0r
-W=190
-H=14
 Text=%1B/s
 NumOfDecimals=1
 AutoScale=1
@@ -209,5 +177,5 @@ MeterStyle=styleBar
 MeasureName=measureNetIn
 X=10
 Y=92
-W=190
+W=(#MaxW#-20)
 H=1
