--- a/Fluent.rmskin/Skins/Fluent/Recycle Bin/Recycle Bin.ini
+++ b/Fluent.rmskin/Skins/Fluent/Recycle Bin/Recycle Bin.ini
@@ -9,14 +9,14 @@ Update=1000
 [Metadata]
 ; Contains basic information of the skin.
 Name=Recycle Bin
-Author=poiru
+Author=Amir Ammari
 Information=Shows the state and size of your Recycle Bin.
 License=Creative Commons BY-NC-SA 3.0
-Version=1.0.0
+Version=1.1
 
 [Variables]
 ; Variables declared here can be used later on between two # characters (e.g. #MyVariable#).
-fontName=Trebuchet MS
+fontName=Segoe UI
 textSize=8
 colorBar=235,170,0,255
 colorText=0,0,0,255
@@ -50,7 +50,7 @@ UpdateDivider=3
 [styleTitle]
 StringAlign=Center
 StringCase=Upper
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
@@ -63,7 +63,7 @@ ClipString=1
 StringAlign=Left
 ; Meters using styleLeftText will be left-aligned.
 StringCase=None
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
@@ -75,7 +75,7 @@ ClipString=1
 [styleRightText]
 StringAlign=Right
 StringCase=None
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
