--- a/Fluent.rmskin/Skins/Fluent/Disk/2 Disks.ini
+++ b/Fluent.rmskin/Skins/Fluent/Disk/2 Disks.ini
@@ -26,14 +26,14 @@ Update=1000
 [Metadata]
 ; Contains basic information of the skin.
 Name=Disk
-Author=poiru
+Author=Amir Ammari
 Information=Displays disk usage.
 License=Creative Commons BY-NC-SA 3.0
-Version=1.0.0
+Version=1.1
 
 [Variables]
 ; Variables declared here can be used later on between two # characters (e.g. #MyVariable#).
-fontName=Trebuchet MS
+fontName=Segoe UI
 textSize=8
 colorBar=235,170,0,255
 colorText=0,0,0,255
@@ -78,7 +78,7 @@ UpdateDivider=120
 [styleTitle]
 StringAlign=Center
 StringCase=Upper
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
@@ -91,7 +91,7 @@ ClipString=1
 StringAlign=Left
 ; Meters using styleLeftText will be left-aligned.
 StringCase=None
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
@@ -103,7 +103,7 @@ ClipString=1
 [styleRightText]
 StringAlign=Right
 StringCase=None
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
