--- a/Fluent.rmskin/Skins/Fluent/Google/Google.ini
+++ b/Fluent.rmskin/Skins/Fluent/Google/Google.ini
@@ -9,14 +9,14 @@ Update=1000
 [Metadata]
 ; Contains basic information of the skin.
 Name=Google
-Author=poiru
+Author=Amir Ammari
 Information=Allows searching through Google.
 License=Creative Commons BY-NC-SA 3.0
-Version=1.0.0
+Version=1.1
 
 [Variables]
 ; Variables declared here can be used later on between two # characters (e.g. #MyVariable#).
-fontName=Trebuchet MS
+fontName=Segoe UI
 textSize=8
 colorBar=235,170,0,255
 colorText=0,0,0,255
@@ -35,7 +35,7 @@ Plugin=InputText.dll
 SolidColor=20,20,20,255
 StringAlign=Left
 StringCase=None
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
@@ -57,7 +57,7 @@ UpdateDivider=86400
 [styleTitle]
 StringAlign=Center
 StringCase=Upper
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
@@ -70,7 +70,7 @@ ClipString=1
 StringAlign=Left
 ; Meters using styleLeftText will be left-aligned.
 StringCase=None
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
