--- a/Fluent.rmskin/Skins/Fluent/Notes/Notes.ini
+++ b/Fluent.rmskin/Skins/Fluent/Notes/Notes.ini
@@ -5,59 +5,30 @@
 [Rainmeter]
 Update=0
 AccurateText=1
+; Context menu option to show signal strength percent
+ContextTitle="Clear Notes"
+ContextAction=[!WriteKeyValue Variables Note "" #CoreFilePath#][!Refresh]
 
 [Metadata]
 ; Contains basic information of the skin.
 Name=Notes
-Author=poiru
+Author=Amir Ammari
 Information=Editable note. || Middle-click to copy to clipboard. | Ctrl+Enter inserts line break.
 License=Creative Commons BY-NC-SA 3.0
-Version=1.0.0
+Version=1.1
 
 [Variables]
 ; Variables declared here can be used later on between two # characters (e.g. #MyVariable#).
+@Include1=#@#systemColors.ini
+@Include2=#@#background.ini
 Note=
-MaxW=190
-fontName=Trebuchet MS
-fontNote=Calibri
-textSize=12
-BGColor=238,238,238,255
+BGColor=EEEEEE
 colorBar=235,170,0,255
-colorText=0,0,0,255
-colorTexI=0,0,0,127
-FontColor=#colorText#
-@Include1=#@#background.ini
+CoreFilePath=""#CURRENTPATH#Notes.ini""
 
 ; ----------------------------------
 ; STYLES are used to "centralize" options
 ; ----------------------------------
-
-[styleTitle]
-StringAlign=Center
-StringCase=Upper
-StringStyle=Bold
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=10
-AntiAlias=1
-ClipString=1
-
-; ----------------------------------
-; METERS display images, text, bars, etc.
-; ----------------------------------
-
-[meterTitle]
-Meter=String
-MeterStyle=styleTitle
-; Using MeterStyle=styleTitle will basically "copy" the
-; contents of the [styleTitle] section here during runtime.
-X=100
-Y=12
-W=#MaxW#
-H=18
-Text=Notes
-; Even though the text is set to Network, Rainmeter will display
-; it as NETWORK, because styleTitle contains StringCase=Upper.
 
 [mScript]
 Measure=Script
@@ -66,33 +37,32 @@ ScriptFile=Notes.lua
 [mInput]
 Measure=Plugin
 Plugin=InputText
-X=9
-Y=37
-W=#MaxW#
+X=10
+Y=40
+W=(#MaxW#-20)
 SolidColor=#BGColor#
 FontColor=#colorText#
-FontFace=#fontNote#
+FontFace=#fontText#
 FontSize=#textSize#
-FocusDismiss=1
 Command1=[!SetVariable Input """$UserInput$""" DefaultValue="#NoteOrig#" H="[Note:H]"][!CommandMeasure mScript EditItemB() #CURRENTCONFIG#]
 
-; ----------------METERS----------------
+; ----------------------------------
+; METERS display images, text, bars, etc.
+; ----------------------------------
+
+[meterTitle]
+Text=Notes
 
 [Note]
 Meter=String
-X=9
-Y=37
-W=(#MaxW#-4)
-Padding=4,0,0,0
-FontColor=#colorTexI#
-FontFace=#fontNote#
+X=10
+Y=40
+W=(#MaxW#-20)
+FontColor=#colorText#
+FontFace=#fontText#
 FontSize=#textSize#
-ClipString=2
-ClipStringW=(#MaxW#-8)
 AntiAlias=1
 Text=#Note#
 MouseActionCursorName=Text
 LeftMouseUpAction=!CommandMeasure mScript EditItemA()
 MiddleMouseDownAction=!CommandMeasure mScript ClipItem()
-MouseOverAction=!SetOption Note FontColor #colorText#
-MouseLeaveAction=!SetOption Note FontColor #colorTexI#
