--- a/Fluent.rmskin/Skins/Fluent/System/System.ini
+++ b/Fluent.rmskin/Skins/Fluent/System/System.ini
@@ -9,14 +9,14 @@ Update=1000
 [Metadata]
 ; Contains basic information of the skin.
 Name=System
-Author=poiru
+Author=Amir Ammari
 Information=Displays basic system stats.
 License=Creative Commons BY-NC-SA 3.0
-Version=1.0.0
+Version=1.1
 
 [Variables]
 ; Variables declared here can be used later on between two # characters (e.g. #MyVariable#).
-fontName=Trebuchet MS
+fontName=Segoe UI
 textSize=8
 colorBar=235,170,0,255
 colorText=0,0,0,255
@@ -51,7 +51,7 @@ UpdateDivider=20
 [styleTitle]
 StringAlign=Center
 StringCase=Upper
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
@@ -64,7 +64,7 @@ ClipString=1
 StringAlign=Left
 ; Meters using styleLeftText will be left-aligned.
 StringCase=None
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
@@ -76,7 +76,7 @@ ClipString=1
 [styleRightText]
 StringAlign=Right
 StringCase=None
-StringStyle=Bold
+
 
 
 FontColor=#colorText#
